--- a/water-importer/rootfs/app/templates/index.html
+++ b/water-importer/rootfs/app/templates/index.html
@@ -325,7 +325,7 @@
             formData.append('file', file);
             
             try {
-                const response = await fetch('/upload', {
+                const response = await fetch('upload', {
                     method: 'POST',
                     body: formData
                 });
